Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-38871

Variable declarations accept unexpected data type attributes (lengh,dec,srid)

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 13.0
    • 13.0.1
    • Data types
    • None
    • Can result in unexpected behaviour
    • Q1/2026 Server Development, Q2/2026 Server Maintenance

    Description

      Some data types allow non-relevant attributes in variable declarations.

      The following scripts work without problems. The expected behavior would be to raise an error.

      RECORD

      SET sql_mode=ORACLE;
      DELIMITER $$
      CREATE OR REPLACE PROCEDURE p1 AS
        TYPE rec0_t IS RECORD (a INT);
        r00 rec0_t (10);
        r01 rec0_t (10,2);
        r2 rec0_t REF_SYSTEM_ID=101;
      BEGIN
        NULL;
      END;
      $$
      DELIMITER ;
      

      Associative arrays

      SET sql_mode=ORACLE;
      DELIMITER $$
      CREATE OR REPLACE PROCEDURE p1 AS
        TYPE assoc0_t IS TABLE OF INT INDEX BY INT;
        r00 assoc0_t (10);
        r01 assoc0_t (10,2);
        r2 assoc0_t REF_SYSTEM_ID=101;
      BEGIN
        NULL;
      END;
      $$
      DELIMITER ;
      

      SYS_REFCURSOR

      SET sql_mode=ORACLE;
      DELIMITER $$
      CREATE OR REPLACE PROCEDURE p1 AS
        r00 SYS_REFCURSOR (10);
        r01 SYS_REFCURSOR (10,2);
        r2 SYS_REFCURSOR REF_SYSTEM_ID=101;
      BEGIN
        NULL;
      END;
      $$
      DELIMITER ;
      

      Attachments

        Issue Links

          Activity

            People

              bar Alexander Barkov
              bar Alexander Barkov
              Alexander Barkov Alexander Barkov
              Ramesh Sivaraman Ramesh Sivaraman
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.