sql/sql_lex.cc
@@ -13148,18 +13148,18 @@ bool LEX::declare_type_assoc_array(THD *thd,
 
 
 bool LEX::set_field_type_udt_or_typedef(Lex_field_type_st *type,
-                                        const LEX_CSTRING &name,
-                                        const Lex_length_and_dec_st &attr)
+                             const LEX_CSTRING &name,
+                             const Lex_length_and_dec_st &attr,
+                             const Lex_column_charset_collation_attrs_st &coll)
 {
   bool is_typedef= false;
-  if (unlikely(set_field_type_typedef(type, name, &is_typedef)))
+  if (unlikely(set_field_type_typedef(type, name, attr, coll, &is_typedef)))
     return true;
 
   if (is_typedef)
     return false;
 
-  return set_field_type_udt(type, name, attr,
-                            Lex_column_charset_collation_attrs());
+  return set_field_type_udt(type, name, attr, coll);
 }
 
 
@@ -13169,34 +13169,13 @@ bool LEX::set_field_type_udt(Lex_field_type_st *type,
                              const Lex_column_charset_collation_attrs_st &coll)
 {
   const Type_handler *h;
-  uint column_attributes;
 
   if (!(h= Type_handler::handler_by_name_or_error(thd, name)))
     return true;
 
-  column_attributes= attr.has_explicit_length() ? Type_handler::ATTR_LENGTH :0;
-  column_attributes|= attr.has_explicit_dec() ? Type_handler::ATTR_DEC :0;
-  column_attributes|= coll.is_empty() ? 0 : Type_handler::ATTR_CHARSET;
-  column_attributes|= last_field->get_attr_uint32(0) ?
-                        Type_handler::ATTR_SRID : 0;
-
-  if ((column_attributes&= ~h->get_column_attributes()))
-  {
-    const char *attr_name= "UNKNOWN";
-    if (column_attributes & Type_handler::ATTR_LENGTH)
-      attr_name= "LENGTH";
-    else if (column_attributes & Type_handler::ATTR_DEC)
-      attr_name= "DECIMALS";
-    else if (column_attributes & Type_handler::ATTR_SRID)
-      attr_name= "REF_SYSTEM_ID";
-    else if (column_attributes & Type_handler::ATTR_CHARSET)
-      attr_name= "CHARACTER SET";
-
-    my_error(ER_UNSUPPORTED_DATA_TYPE_ATTRIBUTE, MYF(0),
-        ErrConvString(name.str, name.length,system_charset_info).ptr(),
-        attr_name);
+  if (h->check_data_type_attributes(name, attr, coll,
+                                    last_field->get_attr_uint32(0)))
     return true;
-  }
 
   type->set(h, attr, coll);
   return false;
@@ -13230,8 +13209,10 @@ bool LEX::set_cast_type_udt(Lex_cast_type_st *type,
 
 
 bool LEX::set_field_type_typedef(Lex_field_type_st *type,
-                                 const LEX_CSTRING &name,
-                                 bool *is_typedef)
+                              const LEX_CSTRING &name,
+                              const Lex_length_and_dec_st &attr,
+                              const Lex_column_charset_collation_attrs_st &coll,
+                              bool *is_typedef)
 {
   DBUG_ASSERT(type);
   DBUG_ASSERT(is_typedef);
@@ -13244,6 +13225,10 @@ bool LEX::set_field_type_typedef(Lex_field_type_st *type,
       type->set(composite->type_handler(), NULL);
       last_field->set_attr_const_generic_ptr(0, composite);
       *is_typedef= true;
+      if (composite->type_handler()->check_data_type_attributes(name,
+                                              attr, coll,
+                                              last_field->get_attr_uint32(0)))
+        return true;
     }
   }
 
