sql/sql_lex.h
@@ -5128,10 +5128,13 @@ public:
                                 Spvar_definition *value);
   bool set_field_type_typedef(Lex_field_type_st *type,
                               const LEX_CSTRING &name,
+                              const Lex_length_and_dec_st &attr,
+                              const Lex_column_charset_collation_attrs_st &coll,
                               bool *is_typedef);
   bool set_field_type_udt_or_typedef(Lex_field_type_st *type,
-                                     const LEX_CSTRING &name,
-                                     const Lex_length_and_dec_st &attr);
+                             const LEX_CSTRING &name,
+                             const Lex_length_and_dec_st &attr,
+                             const Lex_column_charset_collation_attrs_st &coll);
 
   bool map_data_type(const Lex_ident_sys_st &schema,
                      Lex_field_type_st *type) const;
